--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
   </main>
 
   <footer class="site-footer">
-    <p>Autor: Seu Nome • Trabalho de defesa</p>
+    <p>Autor: Matheus Cesar de Lima - Analista de Desenvolvimento de Sistemas • Trabalho de defesa</p>
   </footer>
 </body>
 </html>
