--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
   </main>
 
   <footer class="site-footer">
-    <p>Autor: Matheus Cesar de Lima - Analista de Desenvolvimento de Sistemas • Trabalho de defesa</p>
+    <p>Este site foi desenvolvido por <strong>Matheus Cesar de Lima</strong> como parte do projeto acadêmico.</p>
   </footer>
 </body>
 </html>
